Fix text wrap

--- a/src/components/Search/SearchResultItem/SearchResultItem.css
+++ b/src/components/Search/SearchResultItem/SearchResultItem.css
@@ -56,4 +56,5 @@
   font-size: 80%;
   margin-left: 8px;
   padding: 1px 3px;
+  white-space: nowrap;
 }
